data/forge_javadoc/1.7.10/raw/net/minecraft/client/shader/ShaderDefault.md
---
title: "ShaderDefault"
description: "public class ShaderDefault extends ShaderUniform"
package: "net/minecraft/client/shader"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/shader/ShaderDefault.html"
sourceType: javadoc
---

# ShaderDefault

**Inheritance:** java.lang.Object → net.minecraft.client.shader.ShaderUniform → net.minecraft.client.shader.ShaderDefault

## Class signature

```java
public class ShaderDefault extends ShaderUniform
```

## Constructors

- `ShaderDefault()`

## Methods

- `void func_148081_a(float p_148081_1_, float p_148081_2_, float p_148081_3_, float p_148081_4_)`
- `void func_148083_a(int p_148083_1_, int p_148083_2_, int p_148083_3_, int p_148083_4_)`
- `void func_148087_a(float p_148087_1_, float p_148087_2_)`
- `void func_148088_a(Matrix4f p_148088_1_)`
- `void func_148090_a(float p_148090_1_)`
- `void func_148092_b(float p_148092_1_, float p_148092_2_, float p_148092_3_, float p_148092_4_)`
- `void func_148094_a(float p_148094_1_, float p_148094_2_, float p_148094_3_, float p_148094_4_, float p_148094_5_, float p_148094_6_, float p_148094_7_, float p_148094_8_, float p_148094_9_, float p_148094_10_, float p_148094_11_, float p_148094_12_, float p_148094_13_, float p_148094_14_, float p_148094_15_, float p_148094_16_)`
- `void func_148095_a(float p_148095_1_, float p_148095_2_, float p_148095_3_)`
- `void func_148097_a(float[] p_148097_1_)`
