data/forge_javadoc/1.9.4/raw/net/minecraft/client/shader/ShaderDefault.md
---
title: "ShaderDefault"
description: "public class ShaderDefault extends ShaderUniform"
package: "net/minecraft/client/shader"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/client/shader/ShaderDefault.html"
sourceType: javadoc
---

# ShaderDefault

**Inheritance:** java.lang.Object → net.minecraft.client.shader.ShaderUniform → net.minecraft.client.shader.ShaderDefault

## Class signature

```java
public class ShaderDefault extends ShaderUniform
```

## Constructors

- `ShaderDefault()`

## Methods

- `void set(float p_148090_1_)`
- `void set(float[] p_148097_1_)`
- `void set(float p_148087_1_, float p_148087_2_)`
- `void set(float p_148095_1_, float p_148095_2_, float p_148095_3_)`
- `void set(float p_148081_1_, float p_148081_2_, float p_148081_3_, float p_148081_4_)`
- `void set(float m00, float m01, float m02, float m03, float m10, float m11, float m12, float m13, float m20, float m21, float m22, float m23, float m30, float m31, float m32, float m33)`
- `void set(int p_148083_1_, int p_148083_2_, int p_148083_3_, int p_148083_4_)`
- `void set(org.lwjgl.util.vector.Matrix4f matrix)`
- `void setSafe(float p_148092_1_, float p_148092_2_, float p_148092_3_, float p_148092_4_)`
